--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -3,9 +3,8 @@
 <title>Записи сообщества {{ group.title }}</title>
 {% endblock title %}
 {% block content %}
-  <!-- класс py-5 создает отступы сверху и снизу блока -->
   <div class="container py-5">
-    <h1>{{ header }}</h1>
+    <h1>Записи сообщества "{{ group.title }}"</h1>
     {% for post in posts %}
       <p>
         {{ post.group }}
