--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}
-<title>{{ title }}</title>
+<title>Последние обновления на сайте</title>
 {% endblock title %}
 {% block content %}
-  <!-- класс py-5 создает отступы сверху и снизу блока -->
   <div class="container py-5">
-    <h1>{{ header }}</h1>
+    <h1>Последние обновления на сайте</h1>
     {% for post in posts %}
       <ul>
         <li>
