--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container py-5">
     <h1>Записи сообщества "{{ group.title }}"</h1>
-    {% for post in posts %}
+    {% for post in page_obj %}
       <p>
         {{ post.group }}
       </p>
@@ -22,5 +22,6 @@
       </p>
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
+    {% include 'posts/includes/paginator.html' %}
   </div>
 {% endblock content %}
